Documentation API and refactor code tysringe
